# rust-os

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
bare-metal/: Cargo.toml
bare-metal/src/: main.rs  vga_buffer.rs
blog_os/multitasking/: Cargo.toml
blog_os/multitasking/src/: interrupts.rs  lib.rs  serial.rs
blog_os/multitasking/src/allocator/: fixed_size_block.rs  linked_list.rs
blog_os/multitasking/src/task/: executor.rs
blog_os/notes/: ch12-async-await.md
interrupts/: Cargo.toml
interrupts/src/: interrupts.rs  lib.rs  main.rs  vga_buffer.rs
memory/: Cargo.toml
memory/.cargo/: config.toml
memory/src/: allocator.rs  gdt.rs  lib.rs  main.rs  memory.rs
memory/src/allocator/: bump.rs  linked_list.rs
memory/tests/: heap_allocation.rs  stack_overflow.rs
multitasking/src/: allocator.rs  interrupts.rs  main.rs  memory.rs
multitasking/src/task/: keyboard.rs  mod.rs  simple_executor.rs
multitasking/tests/: heap_allocation.rs
notes/: ch12-async-await.md
src/: main.rs
